# template_cpp

./: .clang-format
.github/workflows/: commit.yml
doc/: index.md
doc/project/: cmake.md
source/: CMakeLists.txt
source/app/: CMakeLists.txt
source/app/helloWord/: CMakeLists.txt
source/app/helloWord/include/: demo.hpp
source/app/helloWord/src/: demo.cpp  main.cpp
source/app/helloWord/tests/: CMakeLists.txt  test_demo.cpp
source/cmake/: init.cmake
source/cmake/config/: flag_config.cmake  standard_config.cmake
